cabal-version:      3.0
name:               ref-calc
version:            0.0.0.1
synopsis:           Refinement Calculus Lang
homepage:           https://github.com/isaac025/ref-calc
license:            BSD-3-Clause
license-file:       LICENSE
author:             Isaac Lopez
maintainer:         isaac.lopez@upr.edu
category:           Language
build-type:         Simple
extra-doc-files:    
    CHANGELOG.md
    README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Expr
        Parser
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                    , parsec
                    , mtl
    hs-source-dirs:   src
    default-language: Haskell2010

executable ref-calc
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        ref-calc

    hs-source-dirs:   app
    default-language: Haskell2010
